[tool.poetry]
name = "streamlit-dqx-price"
version = "0.1.0"
description = ""
authors = ["tig0826 <tigcr0826@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
streamlit = "^1.29.0"
ipython = "8.16.1"
matplotlib = "^3.8.2"
sqlalchemy = "^2.0.24"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


